Still not working

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -204,9 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "europe_json_data = json.load(open(europe_geo_path))\n",
-    "folium.TopoJson(europe_json_data,\n",
-    "                'objects.properties.NAME',\n",
+    "folium.TopoJson(open(europe_geo_path),\n",
+    "                'objects.europe',\n",
     "                name='topojson',\n",
     "               ).add_to(m_europe)\n",
     "m_europe"
@@ -218,11 +217,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_europe.choropleth(geo_data=geo_json_data, data=europe_unemployed,\n",
-    "             columns=['Country', 'Rate'],\n",
-    "             key_on='object.europe.geometries.properties.NAME',\n",
-    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
-    "             legend_name='Unemployment rate (%)')\n",
+    "m_europe.choropleth(\n",
+    "    geo_data=europe_geo_path,\n",
+    "    name='choropleth',\n",
+    "    data=europe_unemployed,\n",
+    "    columns=['Country', 'Rate'],\n",
+    "    key_on='objects.europe.properties.NAME',\n",
+    "    fill_color='RdPu',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    legend_name='Unemployment Rate (%)'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m_europe"
    ]
   },
@@ -245,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat01.png')"
@@ -263,9 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat02.png')"
@@ -281,9 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat03.png')"
@@ -301,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat04.png')"
@@ -319,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat07.png')"
@@ -344,7 +347,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -359,7 +361,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -374,7 +375,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -398,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_map = folium.Map(location=[47, 8], zoom_start=7)\n",
@@ -429,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat05.png')"
@@ -440,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat06.png')"
@@ -482,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA\n",
@@ -495,9 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.rename(columns={'index':'Région linguistique'}, inplace=True)\n",
@@ -519,9 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.iloc[:,0:4]"
