Sanitize helper function, data and exo 02

--- a/HW3/mapping.ipynb
+++ b/HW3/mapping.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mapping Cantons to their Codes\n",
+    "\n",
+    "The idea behind this helper file is to scrape the Wikipedia page in order to define a dictionary linking cantons to their codes (needed to work with the ids in order to draw the choropleth maps of Switzerland).\n",
+    "\n",
+    "The method was inspired by [this code](https://adesquared.wordpress.com/2013/06/16/using-python-beautifulsoup-to-scrape-a-wikipedia-table/) but was still adapted to fit our needs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import json\n",
+    "#We start with our most important imports\n",
     "import urllib3\n",
     "import pickle as pkl\n",
     "from bs4 import BeautifulSoup"
@@ -22,6 +33,7 @@
    },
    "outputs": [],
    "source": [
+    "#We set the important variables\n",
     "http = urllib3.PoolManager()\n",
     "urllib3.disable_warnings()\n",
     "WIKI = \"https://fr.wikipedia.org/wiki/Canton_(Suisse)\"\n",
@@ -36,14 +48,22 @@
    },
    "outputs": [],
    "source": [
+    "#We get find the table to work with\n",
     "r = http.request('GET', WIKI, headers = header)\n",
     "soup = BeautifulSoup(r.data, \"lxml\")\n",
     "table = soup.find(\"table\", { \"class\" : \"wikitable sortable\" })"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to find our data, we looked at the source code to understand what were the elements we needed to retrieve. We then simply applied the algorithm to retrieve these elements and append them to our lists."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,8 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prove the sanity of our data, we display the head of each list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -71,47 +98,21 @@
     {
      "data": {
       "text/plain": [
-       "['ZH',\n",
-       " 'BE',\n",
-       " 'LU',\n",
-       " 'UR',\n",
-       " 'SZ',\n",
-       " 'OW',\n",
-       " 'NW',\n",
-       " 'GL',\n",
-       " 'ZG',\n",
-       " 'FR',\n",
-       " 'SO',\n",
-       " 'BS',\n",
-       " 'BL',\n",
-       " 'SH',\n",
-       " 'AR',\n",
-       " 'AI',\n",
-       " 'SG',\n",
-       " 'GR',\n",
-       " 'AG',\n",
-       " 'TG',\n",
-       " 'TI',\n",
-       " 'VD',\n",
-       " 'VS',\n",
-       " 'NE',\n",
-       " 'GE',\n",
-       " 'JU',\n",
-       " 'CH']"
+       "['ZH', 'BE', 'LU', 'UR', 'SZ']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "code"
+    "code[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -119,47 +120,52 @@
     {
      "data": {
       "text/plain": [
-       "['Zurich',\n",
-       " 'Berne',\n",
-       " 'Lucerne',\n",
-       " 'Uri',\n",
-       " 'Schwytz',\n",
-       " 'Obwald',\n",
-       " 'Nidwald',\n",
-       " 'Glaris',\n",
-       " 'Zoug',\n",
-       " 'Fribourg',\n",
-       " 'Soleure',\n",
-       " 'Bâle-Ville',\n",
-       " 'Bâle-Campagne',\n",
-       " 'Schaffhouse',\n",
-       " 'Appenzell Rhodes-Extérieures',\n",
-       " 'Appenzell Rhodes-Intérieures',\n",
-       " 'Saint-Gall',\n",
-       " 'Grisons',\n",
-       " 'Argovie',\n",
-       " 'Thurgovie',\n",
-       " 'Tessin',\n",
-       " 'Vaud',\n",
-       " 'Valais',\n",
-       " 'Neuchâtel',\n",
-       " 'Genève',\n",
-       " 'Jura',\n",
-       " 'Suisse']"
+       "['Zurich', 'Berne', 'Lucerne', 'Uri', 'Schwytz']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "canton"
+    "canton[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, we still face an issue with 2 Swiss cantons, Schwytz and Saint-Gall, which do not have the same name in the data retrieved from \"amstat\". Thus, we decide to change them manually in order to have the ease the computations on the main notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Zurich', 'Berne', 'Lucerne', 'Uri', 'Schwyz']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canton = ['Schwyz' if c == 'Schwytz' else c for c in canton]\n",
+    "canton = ['St-Gall' if c == 'Saint-Gall' else c for c in canton]\n",
+    "canton[:5] #We can already see from here 'Schwytz' was changed to 'Schwyz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
