Europe finished min requirements

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -188,14 +188,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "central_swiss_coord = [46.484, 8.1336] \n",
-    "m_europe = folium.Map(location=central_swiss_coord,\n",
-    "           tiles='Stamen Toner',\n",
-    "           zoom_start=4)\n",
-    "m_europe"
+    "m_europe = folium.Map(location=central_swiss_coord, zoom_start=4, tiles='cartodbpositron')"
    ]
   },
   {
@@ -204,39 +203,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folium.TopoJson(open(europe_geo_path),\n",
-    "                'objects.europe',\n",
-    "                name='topojson',\n",
-    "               ).add_to(m_europe)\n",
+    "m_europe.choropleth(open(europe_geo_path),\n",
+    "             data=europe_unemployed,\n",
+    "             columns=('Country', 'Rate'),\n",
+    "             legend_name='Unemployment rate (%)',\n",
+    "             fill_color='RdPu',\n",
+    "             fill_opacity= 0.8,\n",
+    "             key_on = 'feature.properties.NAME',\n",
+    "             topojson='objects.europe')\n",
     "m_europe"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "m_europe.choropleth(\n",
-    "    geo_data=europe_geo_path,\n",
-    "    name='choropleth',\n",
-    "    data=europe_unemployed,\n",
-    "    columns=['Country', 'Rate'],\n",
-    "    key_on='objects.europe.properties.NAME',\n",
-    "    fill_color='RdPu',\n",
-    "    fill_opacity=0.7,\n",
-    "    line_opacity=0.2,\n",
-    "    legend_name='Unemployment Rate (%)'\n",
-    ")\n"
+    "As we can see, for the countries we have no data on, the color that was chosen as default is a very pale yellow, almost white. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "m_europe"
+    "Here we can see that the difference in unemployment rates between Switzerland and a lot of it's neighboring countries (Fermany, Austria, Poland, and so on) is basically the same, but it fares a lot better than two of it's direct neighbors: France and Italy. \n",
+    "\n",
+    "Thus, in terms of unemployment, Switzerland is one of the copuntries with the lowest rate, but not the only one to fare so well."
    ]
   },
   {
