Europe color change

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -207,7 +207,7 @@
     "             data=europe_unemployed,\n",
     "             columns=('Country', 'Rate'),\n",
     "             legend_name='Unemployment rate (%)',\n",
-    "             fill_color='RdPu',\n",
+    "             fill_color='RdYlGn',\n",
     "             fill_opacity= 0.8,\n",
     "             key_on = 'feature.properties.NAME',\n",
     "             topojson='objects.europe')\n",
@@ -218,16 +218,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, for the countries we have no data on, the color that was chosen as default is a very pale yellow, almost white. "
+    "As we can see, for the countries we have no data on, the color that was chosen as default is a a vivid red. It is thus easy to see that the countries we have no information about are those not in the UE or in Schengen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the difference in unemployment rates between Switzerland and a lot of it's neighboring countries (Fermany, Austria, Poland, and so on) is basically the same, but it fares a lot better than two of it's direct neighbors: France and Italy. \n",
+    "Here we can see that the difference in unemployment rates between Switzerland and a lot of it's neighboring countries (Germany, Austria, Poland, and so on) is basically the same, but it fares a lot better than two of it's direct neighbors: France and Italy. \n",
     "\n",
-    "Thus, in terms of unemployment, Switzerland is one of the copuntries with the lowest rate, but not the only one to fare so well."
+    "Thus, in terms of unemployment, Switzerland is one of the copuntries with the lowest rate, but not the only one to fare so well.\n",
+    "\n",
+    "It is also important to note that the colors are a little bit misleading because of the way that choropleth maps reduce the threshold. Thus, we have any country with rating between 3 and 6 that has the same color as Switzerland. Seeing as the rate in Switzerland is 5%, this means that any country with less would have the same color, yet still fare better than Switzerland (which is a case for Germany or Iceland)."
    ]
   },
   {
