Added 2nd map to ex02

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "Image(IMAGE_FOLDER + 'amstat04.png')"
+    "Image(IMAGE_FOLDER + 'amstat04.png', retina = True)"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
     "swiss_unemployment.insert(1, 'Code', swiss_unemployment['Canton'].map(dico))\n",
-    "swiss_unemployment.head()"
+    "swiss_unemployment"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
     "             topojson = 'objects.cantons',\n",
-    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
+    "             fill_color='OrRd', fill_opacity=0.7, line_opacity=0.2,\n",
     "             legend_name='Percentage of unemployment (%)')\n",
     "swiss_unemployment_map"
    ]
@@ -292,34 +292,45 @@
    "source": [
     "### Unemployement rate (of people without a job) of each Swiss canton\n",
     "\n",
-    "In this question we will focus on the \"real\" unemployment rate of people who currently do not have a job (which seems more sound than looking at people who do have a job but are simply looking for a new one). However, to be able to do that, we first need to determine the current active population of Switzerland using the provided data."
+    "In this question we will focus on the \"real\" unemployment rate of people who currently do not have a job (which seems more sound than looking at people who do have a job but are simply looking for a new one). However, to be able to do that, we first need to determine the actual unemployment rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When trying to compute the active population of each canton, we found results differing from those of the [Federal Statistical Office](https://www.bfs.admin.ch/bfs/en/home.html). Even though these numbers are not up to date, we decided to try another method to calculate the rate : we first calculate the rate of people without a job and multiply it by the total rate of unemployed people."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "real_swiss_unemployment = swiss_unemployment"
+    "real_swiss_unemployment = swiss_unemployment\n",
+    "del real_swiss_unemployment['Demandeurs d\\'emploi non chômeurs']\n",
+    "real_swiss_unemployment['Taux de chômage'] = (real_swiss_unemployment['Chômeurs inscrits'] / real_swiss_unemployment['Demandeurs d\\'emploi'])*real_swiss_unemployment['Taux de chômage']\n",
+    "#real_swiss_unemployment['Taux de chômage'] = pd.to_numeric(real_swiss_unemployment['Taux de chômage']).map('{:,.2f}'.format)\n",
+    "real_swiss_unemployment.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "real_swiss_unemployment_map = folium.Map(location=[47, 8], zoom_start=7)\n",
+    "real_swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8)\n",
     "real_swiss_unemployment_map.choropleth(open(swiss_geo_path), data=real_swiss_unemployment,\n",
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
     "             topojson = 'objects.cantons',\n",
-    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
+    "             fill_color='OrRd', fill_opacity=0.7, line_opacity=0.2,\n",
     "             legend_name='Percentage of unemployment (%)')\n",
     "real_swiss_unemployment_map"
    ]
