--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -21,8 +21,10 @@
     "IMAGE_FOLDER = 'Data/Images/'\n",
     "DATA_EUROPE = 'Data/une_rt_a.xls'\n",
     "DATA_SWITZERLAND = 'Data/chomage.xlsx'\n",
-    "DATA_SWITZERLAND_BY_AGE = 'Data/chomage_age.xlsx'\n",
-    "DATA_SWITZERLAND_BY_NATIONALITY = 'Data/chomage_nationalite.xlsx'"
+    "#DATA_SWITZERLAND_BY_AGE = 'Data/chomage_age.xlsx'\n",
+    "#DATA_SWITZERLAND_BY_NATIONALITY = 'Data/chomage_nationalite.xlsx'\n",
+    "DATA_SWITZERLAND_BY_NATIONALITY = 'Data/chomage_etrangers.xlsx'\n",
+    "DATA_SWITZERLAND_BY_AGE = 'Data/chomage_age_nat_2.xlsx'"
    ]
   },
   {
@@ -52,15 +54,15 @@
     "import pandas as pd\n",
     "import pickle as pkl\n",
     "import seaborn as sns #might not be useful\n",
-    "from IPython.display import Image #allows showing images"
+    "from IPython.display import Image #allows showing images\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Verifying we have the right version\n",
@@ -92,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro01.png')"
@@ -110,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro02.png')"
@@ -132,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "europe_unemployed.head()"
@@ -157,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat01.png')"
@@ -168,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat02.png')"
@@ -179,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat03.png', retina = True)"
@@ -190,9 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat04.png', retina = True)"
@@ -211,22 +199,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_unemployment= pd.read_excel(DATA_SWITZERLAND, header=[0,1])\n",
     "del swiss_unemployment['Mois'] #Only NaN values\n",
     "del swiss_unemployment['Total'] #Same as 'Septembre 2017' as we only choose one month\n",
-    "swiss_unemployment.drop([26], inplace=True) #We only need the values of each canton, not nationally"
+    "swiss_unemployment.dropna(inplace=True) #We only need the values of each canton, not nationally"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -241,7 +226,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -264,12 +248,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8)\n",
+    "swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
     "swiss_unemployment_map.choropleth(open(swiss_geo_path), data=swiss_unemployment,\n",
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
@@ -305,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "real_swiss_unemployment = swiss_unemployment\n",
@@ -320,12 +301,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "real_swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8)\n",
+    "real_swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
     "real_swiss_unemployment_map.choropleth(open(swiss_geo_path), data=real_swiss_unemployment,\n",
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
@@ -353,37 +332,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have two different questions again: one about the difference in employment regarding nationality, and the second regarding age. For both, we proceed similarly as above, but select the option \"Classes d'âge 15-24, 25-49, 50 ans et plus\" for one of them and \"Nationalité\" for the other."
+    "Here we have two different questions again: one about the difference in employment regarding nationality, and the second regarding age. We proceed to the amstat website and select the following categories:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Image(IMAGE_FOLDER + 'amstat05.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Image(IMAGE_FOLDER + 'amstat06.png')"
+    "Image(IMAGE_FOLDER + 'categories_q3.png', width='450px')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To start off, we import the data set downloaded previously and clean it as necessary.\n",
-    "In our case, we need to flatten some of the structure."
+    "After the selection we are asked to specifiy the age range: we choose to use 3 categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'age_selection.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After having selected out criteria we can further pivot and unpivot the rows using the websites tools:\n",
+    "\n",
+    "We start out with the following allignment. By clicking on the pivot button we can change this lignup to have 2 columns, one for foreigners and one for swiss nationals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'foreigners_1.png', width='450px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'foreigners_2.png', width='450px')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this set up without having to preform transformations on the columns.\n",
+    "\n",
+    "We import the data set downloaded previously.\n",
+    "We only need to flatten some of the structure."
    ]
   },
   {
@@ -394,68 +405,181 @@
    },
    "outputs": [],
    "source": [
-    "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,1]) "
+    "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,2]) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "del swiss_foreign_unemployed['Mois'] #remove empty line\n",
-    "del swiss_foreign_unemployed['Total'] #only interessted in september"
+    "del swiss_foreign_unemployed['Nationalité'] ##remove Measures column\n",
+    "swiss_foreign_unemployed.columns = swiss_foreign_unemployed.columns.droplevel(1) ##remove redunant multiindex"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA\n",
-    "swiss_foreign_unemployed.reset_index(inplace=True) #add index\n",
-    "swiss_foreign_unemployed.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "swiss_foreign_unemployed.rename(columns={'index':'Région linguistique'}, inplace=True)\n",
-    "swiss_foreign_unemployed.columns.name = None #we don't want a super column\n",
     "swiss_foreign_unemployed.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To later easely map the values in the dataframe to the shapes as provided in the topojson we preform a mapping, as before:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_foreign_unemployed.columns = swiss_foreign_unemployed.columns.droplevel(1)"
+    "swiss_foreign_unemployed['Code'] = swiss_foreign_unemployed.index.to_series().map(dico)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We calculate different measures to look at the difference between unemploment between two groups.\n",
+    "The difference (scaled by the general unemploment rate) and the rate both show different trends."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = swiss_foreign_unemployed['Etrangers'] + swiss_foreign_unemployed['Suisses'] #this should be oths general data\n",
+    "swiss_foreign_unemployed['Difference'] = (swiss_foreign_unemployed['Etrangers'] - swiss_foreign_unemployed['Suisses']) / total\n",
+    "swiss_foreign_unemployed['Ratio'] = swiss_foreign_unemployed['Etrangers'] / swiss_foreign_unemployed['Suisses']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_foreign_unemployed.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first look at the ratio. We can observe that the difference between the unemploment rate is smaller in urbanized areas such as Geneva or Zurich and bigger in rural areas, such as Uri and Glarus. \n",
+    "Looking at the absolute rates, we see that areas with high disparoties have very low rates of unemployment in general. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_foreign_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
+    "swiss_foreign_map.choropleth(open(swiss_geo_path),\n",
+    "             data=swiss_foreign_unemployed,\n",
+    "             columns=('Code', 'Ratio'),\n",
+    "             legend_name='Ratio in unemployment (%)',\n",
+    "             fill_opacity=0.7, line_opacity=0.2,\n",
+    "             fill_color='OrRd',\n",
+    "             key_on = 'feature.id',\n",
+    "             topojson='objects.cantons')\n",
+    "swiss_foreign_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_foreign_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
+    "swiss_foreign_map.choropleth(open(swiss_geo_path),\n",
+    "             data=swiss_foreign_unemployed,\n",
+    "             columns=('Code', 'Difference'),\n",
+    "             legend_name='Ratio in unemployment (%)',\n",
+    "             fill_opacity=0.7, line_opacity=0.2,\n",
+    "             fill_color='OrRd',\n",
+    "             key_on = 'feature.id',\n",
+    "             topojson='objects.cantons')\n",
+    "swiss_foreign_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Differences in unemployment between swiss and foreign workers by age groups"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "swiss_foreign_unemployed.iloc[:,0:4]"
+    "swiss_unemployed_age = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[0,1], na_values='...') \n",
+    "swiss_unemployed_age.fillna(value=0, axis = 1, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_unemployed_age.columns = swiss_unemployed_age.columns.droplevel(1)\n",
+    "del swiss_unemployed_age[\"Mois\"] #remove empty line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "swiss_unemployed_age['Code'] = swiss_unemployed_age.index.to_series().map(dico)\n",
+    "swiss_unemployed_age.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_unemployed_age.head() #what looks like 2 columns is 1 :S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = swiss_unemployed_age.groupby('Nationalité')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -491,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
