--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -531,7 +531,9 @@
    "outputs": [],
    "source": [
     "swiss_unemployed_age = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[0,1], na_values='...') \n",
-    "swiss_unemployed_age.fillna(value=0, axis = 1, inplace=True)"
+    "#missing values are set to 0 (we preform no opperations, \n",
+    "#and this will make bar invisuble)\n",
+    "swiss_unemployed_age.fillna(value=0, axis = 1, inplace=True) "
    ]
   },
   {
@@ -571,7 +573,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = swiss_unemployed_age.groupby('Nationalité')"
+    "swiss_unemployed_age.columns = ['index', 'Nationalité', 'Category Name',\n",
+    "       \"Age class: 15-24, 25-49, 50 ans and up\", 'Unemployment rate', 'Code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "del swiss_unemployed_age['Category Name']"
    ]
   },
   {
@@ -579,7 +593,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#yet to find good plot\n",
+    "sns.factorplot(hue=\"Nationalité\", \n",
+    "                   y='Unemployment rate', \n",
+    "                   col='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='index',\n",
+    "                   data=swiss_unemployed_age,\n",
+    "                   kind=\"strip\",     \n",
+    "                   palette=\"hls\", size=6, aspect=1.5)"
+   ]
   },
   {
    "cell_type": "markdown",
