Adding files, description & pretty Barnhart

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -199,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "swiss_unemployment= pd.read_excel(DATA_SWITZERLAND, header=[0,1])\n",
@@ -400,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,2]) "
@@ -411,7 +411,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "del swiss_foreign_unemployed['Nationalité'] ##remove Measures column\n",
@@ -437,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed['Code'] = swiss_foreign_unemployed.index.to_series().map(dico)"
@@ -454,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "total = swiss_foreign_unemployed['Etrangers'] + swiss_foreign_unemployed['Suisses'] #this should be oths general data\n",
@@ -523,17 +529,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "swiss_unemployed_age = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[0,1], na_values='...') \n",
-    "#missing values are set to 0 (we preform no opperations, \n",
-    "#and this will make bar invisuble)\n",
-    "swiss_unemployed_age.fillna(value=0, axis = 1, inplace=True) "
+    "Getting this dataset was more involved, as one had to select the correct links to be able to get the data by age and nationality at the same time.\n",
+    "\n",
+    "Here we show the path we used:\n",
+    "We had to click on monthly reports, and then get the unemploment rate by different categories.\n",
+    "By using this path we get complete controll over what data we want."
    ]
   },
   {
@@ -542,6 +545,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Image(IMAGE_FOLDER + 'find_folder.png', width='300px')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'find_folder_2.png', width='300px')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now read the data into a dataframe. Note that for some cantones, some values are not present, and makrked by '...'. We transform these values into NaN as to more easly handle them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_unemployed_age = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[0,1], na_values='...') \n",
+    "\n",
     "swiss_unemployed_age.columns = swiss_unemployed_age.columns.droplevel(1)\n",
     "del swiss_unemployed_age[\"Mois\"] #remove empty line"
    ]
@@ -570,9 +600,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#renaming columns for convenience\n",
     "swiss_unemployed_age.columns = ['index', 'Nationalité', 'Category Name',\n",
     "       \"Age class: 15-24, 25-49, 50 ans and up\", 'Unemployment rate', 'Code']"
    ]
@@ -589,19 +622,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the exercise we are asked to draw a bar plot. We found that adding even with the bar plot it is quite hard to get a good overview of the data. In our first attempt we plot two barplots.\n",
+    "We found that using the Canton as the x axis gives the most redable charts, as otherwise the Cantons are color coded."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#yet to find good plot\n",
-    "sns.factorplot(hue=\"Nationalité\", \n",
+    "sns.factorplot(#col=\"Nationalité\", \n",
     "                   y='Unemployment rate', \n",
-    "                   col='Age class: 15-24, 25-49, 50 ans and up',\n",
-    "                   x='index',\n",
-    "                   data=swiss_unemployed_age,\n",
-    "                   kind=\"strip\",     \n",
-    "                   palette=\"hls\", size=6, aspect=1.5)"
+    "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='Code',\n",
+    "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Etrangers'],\n",
+    "                   kind=\"bar\",     \n",
+    "                   palette=\"Blues\", size=5, aspect=3)\n",
+    "sns.factorplot(#col=\"Nationalité\", \n",
+    "                   y='Unemployment rate', \n",
+    "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='Code',\n",
+    "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Suisses'],\n",
+    "                   kind=\"bar\",     \n",
+    "                   palette=\"Reds\", size=5, aspect=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,7.5))\n",
+    "g = sns.barplot(y='Unemployment rate', \n",
+    "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='Code',\n",
+    "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Etrangers'], \n",
+    "                   palette=\"Blues\")\n",
+    "sns.barplot(y='Unemployment rate', \n",
+    "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='Code',\n",
+    "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Suisses'], \n",
+    "                   palette='Reds'\n",
+    "           )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we observe that a lot of elderly foreigners are more unemployed. \n",
+    "For both groups young people have the highest unemployment rate.\n",
+    "In some cantons younger people suffer much higher rates of unemployment.\n",
+    "We should check if this coincides with foreigners and swiss nationals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finaly we decide to also show the distribution over all cantons using boxplots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x='Nationalité', \n",
+    "            y='Unemployment rate', \n",
+    "            hue='Age class: 15-24, 25-49, 50 ans and up', data=swiss_unemployed_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(hue='Nationalité', \n",
+    "            y='Unemployment rate', \n",
+    "            x='Age class: 15-24, 25-49, 50 ans and up', data=swiss_unemployed_age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We see that the discrepancy between the foreigners and swiss nationals is largest for the age group 50 and above."
    ]
   },
   {
@@ -612,13 +733,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The röstigraben, that is the cultural gap between german and french speaking switzerland is visible in our analysis.\n",
+    "We note that the french are more unemployed, but have a smaller gap between foreigners and swiss nationals."
+   ]
   }
  ],
  "metadata": {
